<?xml version="1.0"?>
<package format="2">
  <name>transbot_msgs</name>
  <version>1.0.0</version>
  <description>
    Message and service types: custom messages and services for transbot packages
  </description>
  <license>Apache 2.0</license>
  <maintainer email="jiapeng.feng@VKROBOT.com">jiapeng.feng</maintainer>
  <url type="website">http://wiki.ros.org/transbot_msgs</url>
  <url type="emanual">http://transbot.vkrobot.com</url>
  <url type="repository">https://github.com/VKROBOT-GIT/transbot_msgs</url>
  <url type="bugtracker">https://github.com/VKROBOT-GIT/transbot_msgs/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
