<?xml version="1.0"?>
<package format="2">
  <name>transbot_autorace_msgs</name>
  <version>1.0.0</version>
  <description>The transbot_autorace_msgs package
  </description>
  <license>Apache 2.0</license>
  <author email="jiapeng.feng@vkrobot.com">jiapeng.feng</author>
  <maintainer email="jiapeng.feng@vkrobot.com">jiapeng.feng</maintainer>
  <url type="website">http://wiki.ros.org/transbot_autorace</url>
  <url type="emanual">http://transbot.vkrobot.com</url>
  <url type="repository">https://github.com/VKROBOT-GIT/transbot_autorace</url>
  <url type="bugtracker">https://github.com/VKROBOT-GIT/transbot_autorace/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
