<?xml version="1.0"?>
<package format="2">
  <name>transbot</name>
  <version>1.2.3</version>
  <description>
    ROS packages for the transbot (meta package)
  </description>
  <license>Apache 2.0</license>
  <license>BSD</license>
  <maintainer email="jiapeng.feng@vkrobot.com">jiapeng.feng</maintainer>
  <url type="website">http://wiki.ros.org/transbot</url>
  <url type="emanual">http://transbot.vkrobot.com</url>
  <url type="repository">https://github.com/VKROBOT-GIT/transbot</url>
  <url type="bugtracker">https://github.com/VKROBOT-GIT/transbot/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>transbot_bringup</exec_depend>
  <exec_depend>transbot_description</exec_depend>
  <exec_depend>transbot_example</exec_depend>
  <exec_depend>transbot_navigation</exec_depend>
  <exec_depend>transbot_slam</exec_depend>
  <exec_depend>transbot_teleop</exec_depend>
  <export><metapackage/></export>
</package>
