<?xml version="1.0"?>
<package format="2">
  <name>transbot_example</name>
  <version>1.2.3</version>
  <description>
    This package provides four transbot basic example include move using interactive marker, move and stop using LDS, move to goal position, move to custom routes. The interactions node is that you can control the transbot front and back side or rotate to goal position. The obstacle node is that when the robot meets an obstacle, it stops. The patrol node is that transbot move to custom route. There are 3 route(square, triangle, circle) in this package. You can add your route and move the transbot. The pointop node is that you can insert goal position include distance x-axis, y-axis and angluar z-axis.  
  </description>
  <license>Apache 2.0</license>
  <maintainer email="jiapeng.feng@vkrobot.com">jiapeng.feng</maintainer>
  <url type="website">http://wiki.ros.org/transbot_example</url>
  <url type="emanual">http://transbot.robotis.com</url>
  <url type="repository">https://github.com/VKROBOT-GIT/transbot</url>
  <url type="bugtracker">https://github.com/VKROBOT-GIT/transbot/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>actionlib</depend>
  <depend>interactive_markers</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>transbot_msgs</depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>transbot_bringup</exec_depend>
</package>
