<?xml version="1.0"?>
<package format="2">
  <name>transbot_navigation</name>
  <version>1.1.1</version>
  <description>
    The transbot_navigation provides roslaunch scripts for starting the navigation.
  </description>
  <license>Apache 2.0</license>
  <maintainer email="jiapeng.feng@VKROBOT.com">jiapeng.feng</maintainer>
  <url type="website">http://wiki.ros.org/transbot_navigation</url>
  <url type="emanual">http://transbot.vkrobot.com</url>
  <url type="repository">https://github.com/VKROBOT-GIT/transbot</url>
  <url type="bugtracker">https://github.com/VKROBOT-GIT/transbot/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>transbot_bringup</exec_depend>
</package>
