<?xml version="1.0"?>
<package format="2">
  <name>transbot_teleop</name>
  <version>1.1.1</version>
  <description>
    Provides teleoperation using keyboard for transbot.
  </description>
  <license>BSD</license>
  <author>Melonee Wise</author>
  <maintainer email="jiapeng.feng@vkrobot.com">jiapeng.feng</maintainer>
  <url type="website">http://wiki.ros.org/transbot_teleop</url>
  <url type="emanual">http://transbot.vkrobot.com</url>
  <url type="repository">https://github.com/VKROBOT-GIT/transbot</url>
  <url type="bugtracker">https://github.com/VKROBOT-GIT/transbot/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
</package>
