<?xml version="1.0"?>
<package format="2">
  <name>transbot_dqn</name>
  <version>1.0.0</version>
  <description>
    The transbot_dqn package includes applications using reinforcement learning with DQN (Deep Q-Learning).
  </description>
  <license>Apache 2.0</license>
  <author email="jiapeng.feng@vkrobot.com">jiapeng.feng</author>
  <maintainer email="jiapeng.feng@vkrobot.com">jiapeng.feng</maintainer>
  <url type="website">http://wiki.ros.org/transbot_machine_learning</url>
  <url type="emanual">http://turtlebot3.robotis.com</url>
  <url type="repository">https://github.com/VKROBOT-GIT/transbot_machine_learning</url>
  <url type="bugtracker">https://github.com/VKROBOT-GIT/transbot_machine_learning/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
</package>
