<?xml version="1.0"?>
<package format="2">
  <name>transbot_autorace_construction</name>
  <version>1.0.0</version>
  <description>
    TransBot AutoRace: Construction mission ROS 1 packages (meta package)
  </description>
  <license>Apache 2.0</license>
  <author email="jiapeng.feng@vkrobot.com">jiapeng.feng</author>
  <maintainer email="jiapeng.feng@vkrobot.com">jiapeng.feng</maintainer>
  <url type="website">http://wiki.ros.org/transbot_autorace</url>
  <url type="emanual">http://transbot.vkrobot.com</url>
  <url type="repository">https://github.com/VKROBOT-GIT/transbot_autorace</url>
  <url type="bugtracker">https://github.com/VKROBOT-GIT/transbot_autorace/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>transbot_autorace_construction_camera</exec_depend>
  <exec_depend>transbot_autorace_construction_control</exec_depend>
  <exec_depend>transbot_autorace_construction_core</exec_depend>
  <exec_depend>transbot_autorace_construction_detect</exec_depend>
  <export><metapackage/></export>
</package>
