<?xml version="1.0"?>
<package format="2">
  <name>transbot_autorace_parking_core</name>
  <version>1.0.0</version>
  <description> 
    TransBot AutoRace ROS package that TransBot Auto's core
  </description>
  <license>Apache 2.0</license>
  <author email="jiapeng.feng@vkrobot.com">jiapeng.feng</author>
  <author>jiapeng.feng Kim</author>
  <maintainer email="jiapeng.feng@vkrobot.com">jiapeng.feng</maintainer>
  <maintainer email="willson@vkrobot.com">Will Son</maintainer>
  <url type="website">http://wiki.ros.org/transbot_autorace</url>
  <url type="emanual">http://transbot.vkrobot.com</url>
  <url type="repository">https://github.com/VKROBOT-GIT/transbot_autorace</url>
  <url type="bugtracker">https://github.com/VKROBOT-GIT/transbot_autorace/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>python-enum34</exec_depend>
</package>

