<?xml version="1.0"?>
<package format="2">
  <name>transbot_fake</name>
  <version>0.0.1</version>
  <description>
    Package for Transbot fake node. With this package, simple tests can be done without a robot.
    You can do simple tests using this package on rviz without real robots.
  </description>
  <license>Apache 2.0</license>
  <author email="jiapeng.feng@vkrobot.com">jiapeng.feng</author>
  <maintainer email="jiapeng.feng@vkrobot.com">jiapeng.feng</maintainer>
  <url type="website">http://wiki.ros.org/transbot_fake</url>
  <url type="emanual">http://transbot.vkrobot.com</url>
  <url type="repository">https://github.com/VKROBOT-GIT/transbot/transbot_simulations</url>
  <url type="bugtracker">https://github.com/VKROBOT-GIT/transbot/transbot_simulations/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>transbot_msgs</depend>
  <exec_depend>robot_state_publisher</exec_depend>
</package>
