<?xml version="1.0"?>
<package format="2">
  <name>transbot_gazebo</name>
  <version>0.0.1</version>
  <description>
    Gazebo simulation package for the Transbot
  </description>
  <license>Apache 2.0</license>
  <author email="jiapeng.feng@vkrobot.com">jiapeng.feng</author>
  <maintainer email="jiapeng.feng@vkrobot.com">jiapeng.feng</maintainer>
  <url type="website">http://wiki.ros.org/transbot_gazebo</url>
  <url type="emanual">http://transbot.vkrobot.com</url>
  <url type="repository">https://github.com/VKROBOT-GIT/transbot_simulations</url>
  <url type="bugtracker">https://github.com/VKROBOT-GIT/transbot_simulations/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>gazebo_ros</depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>transbot_description</exec_depend>
  <export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
